[package]
name = "bitbar-speedruncom"
version = "0.2.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "bitbar-speedruncom"
path = "src/main.rs"
test = false
bench = false

[dependencies]
chrono = "*"
css-color-parser = "*"
derive_more = "*"
itertools = "*"
notify-rust = "3"
serde = "1"
serde_derive = "1"
serde_json = "1"
xdg-basedir = "1"

[dependencies.bitbar]
git = "https://github.com/fenhl/rust-bitbar"
features = ["base64"]

[dependencies.srcomapi]
git = "https://github.com/fenhl/srcomapi-rs"

[dependencies.timespec]
git = "https://github.com/fenhl/rust-timespec"
