[package]
name = "bitbar-speedruncom"
version = "0.3.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "bitbar-speedruncom"
path = "src/main.rs"
test = false
bench = false

[dependencies]
chrono = "0.4"
css-color-parser = "0.1"
derive_more = "0.99"
itertools = "0.8"
notify-rust = "3"
serde_json = "1"
url = "2"
xdg-basedir = "1"

[dependencies.bitbar]
version = "0.3"
features = [
    "base64",
    "url1" #TODO remove after updating srcomapi to use url 2
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.srcomapi]
git = "https://github.com/fenhl/srcomapi-rs"

[dependencies.timespec]
git = "https://github.com/fenhl/rust-timespec"
